<resources>
    <string name="app_name">Joy</string>
    <!--<string name="title_home">홈</string>-->
    <string name="title_income">수입 입력하기</string>
    <string name="title_expense">지출 입력하기</string>
    <string name="title_daily">일별 통계</string>
    <string name="title_monthly">월별 통계</string>
    <string name="title_quest">퀘스트</string>

    <string name="title_navigation1">수입/지출 입력</string>
    <string name="title_navigation2">일별 조회</string>
    <string name="title_navigation3">홈</string>
    <string name="title_navigation4">월별 통계</string>
    <string name="title_navigation5">퀘스트</string>


    <string name="facebook_app_id">1892044964380913</string>
    <string name="fb_login_protocol_scheme">fb1892044964380913</string>

    <string name="authentication_fail">Authentication failed.</string>
    <string name="daily_expense_widget_title">오늘지출</string>
    <string name="quest_list_widget_title">퀘스트목록</string>
    <string name="weekly_quest_widget_title">주간 목표</string>
    <string name="monthly_quest_widget_title">월간 목표</string>
    <!--<string name="add_widget">Add widget</string>-->
</resources>
