<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_save_new"
        android:icon="@drawable/icon_hand"
        android:title="@string/title_navigation1" />

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/icon_search"
        android:title="@string/title_navigation2" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_pig"
        android:title="@string/title_navigation3" />

    <item
        android:id="@+id/navigation_monthly"
        android:icon="@drawable/icon_chart_linear"
        android:title="@string/title_monthly" />

    <item
        android:id="@+id/navigation_quest"
        android:icon="@drawable/icon_chat"
        android:title="@string/title_quest" />

</menu>
